# omp4py

./: README.md  maze.npy  pdl.toml  pyproject.toml  ruff.toml  setup.py  ty.toml
.github/workflows/: build_wheels.yml
examples/: README.md  fft.py  fib.py  graphc.py  jacobi.py  lud.py  main.py  maze.py  md.py  omputils.py  pi.py  pyproject.toml  qsort.py  quad.py  wordcount.py
examples/omp4py_examples/: fft.py  fib.py  graphc.py  jacobi.py  lud.py  maze.py  md.py  omputils.py  pi.py  qsort.py  quad.py  wordcount.py
omp4py/: __init__.pxd  __init__.py  api.py  context.py  core.py  error.py  pure.py  runtime.py
omp4py/core/: __init__.py  api.py  options.py  parser.py  parser_old.py
omp4py/core/directive/: __init__.py  argsparser.py  directive.py  names.py  schema.py  tokenizer.py
omp4py/core/importer/: pure.py
omp4py/core/imports/: __init__.py  extra.py  loader.py  pure.py
omp4py/core/modifiers/: __init__.py  engine.py
omp4py/core/parser/: __init__.py  error.py  tree.py
omp4py/core/preprocessor/: __init__.py  cbuild.py  obj2ast.py  preprocessor.py
omp4py/core/preprocessor/transformers/: __init__.py  context.py  dataenv.py  mastersync.py  operators.py  parallelism.py  reduction.py  scopes.py  symtable.py  transformer.py  utils.py  worksharing.py
omp4py/core/processor/: __init__.py  builder.py  combined.py  common.py  nodes.py  parallelism.py  processor.py  reduction.py  synchronization.py  tasking.py  varscope.py  workdistribution.py
omp4py/cruntime/: __init__.pxd  __init__.py  api.pxd  parallelism.pxd  synchronization.pxd  tasking.pxd  variables.pxd  workdistribution.pxd
omp4py/cruntime/basics/: __init__.pxd  array.pxd  atomic.pxd  atomic.pyx  lock.pxd  lock.pyx  math.pxd  threadlocal.pxd  threadlocal.pyx  types.pxd
omp4py/cruntime/common/: __init__.pxd  barrier.pxd  controlvars.pxd  enums.pxd  tasks.pxd  thread.pxd  threadshared.pxd
omp4py/directives/: __init__.py  atomic.py  barrier.py  critical.py  flush.py  for_.py  master.py  ordered.py  parallel.py  section.py  sections.py  single.py  task.py  taskwait.py  threadprivate.py
omp4py/directives/clauses/: __init__.py  collapse.py  copyin.py  copyprivate.py  default.py  firstprivate.py  if_.py  lastprivate.py  nowait.py  num_threads.py  ordered.py  private.py  reduction.py  schedule.py  shared.py  untied.py
omp4py/runtime/: __init__.pxd  __init__.py  api.py  api_.pxd  parallelism.pxd  parallelism.py  reductions.py  synchronization.py  tasking.pxd  tasking.py  variables.pxd  variables.py  workdistribution.pxd  workdistribution.py
omp4py/runtime/api/: __init__.pxd  __init__.py  threadteam.pxd  threadteam.py
omp4py/runtime/basics/: __init__.pxd  __init__.py  array.pxd  array.py  array.pyx  atomic.pxd  atomic.py  atomic.pyx  casting.py  compilertypes.pxd  lock.pxd  lock.py  lock.pyx  math.pxd  math.py  threadlocal.pxd  threadlocal.py  types.py  types.pyx
omp4py/runtime/common/: __init__.pxd  __init__.py  barrier.pxd  barrier.py  controlvars.pxd  controlvars.py  enums.pxd  enums.py  tasks.pxd  tasks.py  thread.pxd  thread.py  threadshared.pxd  threadshared.py
omp4py/runtime/icvs/: __init__.pxd  __init__.py  defaults.py  icvs.pxd  icvs.py  places.py
omp4py/runtime/lowlevel/: __init__.py  atomic.pxd  atomic.py  atomic.pyx  mutex.pxd  mutex.py  mutex.pyx  numeric.pxd  numeric.py  numeric.pyx  threadlocal.pxd  threadlocal.py  threadlocal0.pxd  threadlocalh.pxd
omp4py/runtime/tasks/: __init__.pxd  __init__.py  barrier.pxd  barrier.py  compiler.py  context.pxd  context.py  parallelism.pxd  parallelism.py  privatization.pxd  privatization.py  task.pxd  task.py  threadprivate.pxd  threadprivate.py  worksharing.pxd  worksharing.py
scripts/: compile.py
test/: conftest.py  test_for.py  test_parallel.py
test/basic/: test_barrier.py  test_for.py  test_others.py  test_parallel.py  test_section.py  test_single.py  test_task.py
test/utils/: __init__.py  proctest.py
