[project]
name = "omp4py"
version = "1.0"
description = "An OpenMP Implementation for Python"
license = { text = "LGPL-3.0-only" }
authors = [
    { name = "César Pomar", email = "cesaralfredo.pineiro@usc.es" },
    { name = "Juan C. Pichel", email = "juancarlos.pichel@usc.es" },
]
keywords = ["HPC", "OpenMP", "Programming models"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
tblib = "^3.0.0"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report=html"
testpaths = [
    "test",
]
timeout = 3

[tool.coverage.run]
branch = true
include = ["omp4py/*"]


[tool.coverage.html]
directory = "coverage_html_report"


[tool.coverage.report]
show_missing = true
exclude_also = ["^import", "^from", "^\\s*pass"]


[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "omp4py" },
    { include = "omp4py/cruntime", from = "build/libs", format = "wheel" },
]

include = [
    { path = "omp4py/cruntime", format = "sdist" },
    { path = "build/libs/omp4py/cruntime/**/*", format = "wheel" },
]

exclude = [
    "omp4py/cruntime",
]

[tool.poetry.build]
script = "scripts/compile.py"


[build-system]
requires = ["poetry-core", "setuptools>=78", "Cython>=3.1.0a1"]
build-backend = "poetry.core.masonry.api"
