[build-system]
requires = ["setuptools>=78", "Cython>=3.2.4"]
build-backend = "setuptools.build_meta"

[project]
name = "omp4py"
description = "An OpenMP Implementation for Python"
license = "GPL-3.0-only"
authors = [
    { name = "César Pomar", email = "cesaralfredo.pineiro@usc.es" },
    { name = "Juan C. Pichel", email = "juancarlos.pichel@usc.es" },
]
keywords = ["HPC", "OpenMP", "Programming models"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Free Threading",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers"
]

[project.urls]
Repository = "https://github.com/citiususc/omp4py.git"
Issues = "https://github.com/citiususc/omp4py/issues"

[project.optional-dependencies]
compile = ["setuptools>=78", "Cython>=3.2.4"]
all = ['omp4py[compile]']

[dependency-groups]
dev = ["omp4py[all]", "pytest>=9.0.0", "pytest-cov>=7.0.0", "tblib>=3.2.0"]
checks = [{ include-group = "dev" }, "ruff==0.14.11", "ty==0.0.11", "pydoclint==0.8.3"]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report=html --timeout 3"
testpaths = ["test"]

[tool.coverage.run]
branch = true
patch = ["subprocess"]
include = ["omp4py/*"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
show_missing = true
exclude_also = ["^import", "^from", "^\\s*pass"]

[tool.setuptools.dynamic]
version = { attr = "omp4py.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["omp4py*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyx", "*.pxd"]



# From here on, everything is for cibuildwheel configuration
[tool.cibuildwheel]
build = "cp3??t-*" # Only free-threading builds
enable = ["cpython-freethreading"] # Enable free-threaded support for CPython 3.13

[tool.cibuildwheel.windows]
archs = ['auto64'] # Avoid 32-bit Windows builds

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "13" }