[project]
name = "omp4py-examples"
version = "0.1"
description = "OMP4Py examples"
license = "LGPL-3.0-only"
authors = [
    { name = "César Pomar", email = "cesaralfredo.pineiro@usc.es" },
    { name = "Juan C. Pichel", email = "juancarlos.pichel@usc.es" },
]
requires-python = ">=3.12"

[tool.poetry.dependencies]
numpy = "^2.3"
#mpi4py = "^4.0.0"
networkx = "^3.3"
Cython = "^3.1"
setuptools = "^80"
omp4py = {path = ".."}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
