[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project]
name = "omp4py_examples"
version = "1.0+fixed"
description = "OMP4Py examples"
license = "GPL-3.0-only"
authors = [
    { name = "César Pomar", email = "cesaralfredo.pineiro@usc.es" },
    { name = "Juan C. Pichel", email = "juancarlos.pichel@usc.es" },
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = ["omp4py[all]", "numpy>=2.3", "networkx>=3.3"]

[project.optional-dependencies]
mpi4py = ["mpi4py>=4.0"]

[tool.uv.sources]
omp4py = { path = ".." }

[project.scripts]
omp4pyex = "omp4py_examples.main:main"